--- a/Html5/CSS3/PseudoSelectors.css
+++ b/Html5/CSS3/PseudoSelectors.css
@@ -22,6 +22,34 @@ p::after {
 }
 
 /*Pseudo Class*/
-ul li:first-child {
-    background-color: red;
+ul li {
+    padding: 10px;
+    margin-bottom: 10px;
+    list-style: none;
 }
+
+
+    ul li:first-child {
+        background-color: red;
+    }
+
+    ul li:last-child {
+        background-color: red;
+    }
+
+    ul li:nth-of-type(even) {
+        border: 2px solid green;
+    }
+
+    ul li:nth-of-type(odd) {
+        border: 2px solid blue;
+    }
+
+    a{
+        padding: 5px 8px;
+        text-decoration:none;
+        display:block;
+        width:80px;
+        border:1px solid gray;
+        margin-bottom:10px;
+    }
