--- a/Html5/CSS3/PseudoSelectors.css
+++ b/Html5/CSS3/PseudoSelectors.css
@@ -45,11 +45,38 @@ ul li {
         border: 2px solid blue;
     }
 
-    a{
-        padding: 5px 8px;
-        text-decoration:none;
-        display:block;
-        width:80px;
-        border:1px solid gray;
-        margin-bottom:10px;
+a {
+    padding: 5px 8px;
+    text-decoration: none;
+    display: block;
+    width: 80px;
+    border: 1px solid gray;
+    margin-bottom: 10px;
+}
+
+    a:link {
+        color: red;
     }
+
+    a:visited {
+        color: gray;
+    }
+
+    a:hover {
+        color: white;
+        background: green;
+    }
+
+    a:active {
+        color: green;
+        background: gold;
+    }
+
+span {
+    display: none;
+    background-color: yellow;
+    padding: 20px;
+}
+div:hover span{
+    display:block;
+}
